@@ -1,5 +1,12 @@
 2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* config/mips/mips.h (REG_ALLOC_ORDER): Put accumulators first.
+	Tweak formatting.
+	* config/mips/mips.c (mips_ira_cover_classes): Don't use accumulator
+	registers when not optimizing.
+
+2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* config/mips/mips.md (*mul_acc_si): Remove middle alternative
 	and its associated define_split.  Expose the all-d alternative
 	to the register allocator, but mark it with "?".  Mark the first
